--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.2",
     "jest": "^20.0.4",
+  "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.10.5"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
