--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.2",
     "jest": "^20.0.4",
-  "react-test-renderer": "^15.6.1",
+    "prop-types": "^15.5.10",
+    "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.10.5"
   },
   "dependencies": {
